# FCG_Lab1

./: CMakeLists.txt  Makefile
src/: main-binary.cpp  main-fan.cpp  main-strip.cpp  main.cpp
